--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,10 +18,10 @@
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-
+<uses-permission android:name="android.permission.READ_PHONE_STATE"/> 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/proximitybackground2x"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppBaseTheme" >
         <activity
